--- a/src/index.html
+++ b/src/index.html
@@ -167,9 +167,9 @@
     </section>
 
     <section class="my-5">
-      <h5 class="h5-elem mb-5">Please download the file called network.cfg to a pendrive (FAT file system) by clicking on the button below, then and plug it into the USB port of your device for 20 seconds. Reboot the player afterwards.</h5>
+      <h5 class="h5-elem mb-5">Please download the file called update_config.cfg to a pendrive (FAT file system) by clicking on the button below, then and plug it into the USB port of your device for 20 seconds. Reboot the player afterwards.</h5>
       <div class="my-5">
-        <button class="btn-secondary cursor-pointer" @click="download_data">Download network.cfg</button>
+        <button class="btn-secondary cursor-pointer" @click="download_data">Download update_config.cfg</button>
       </div>
       <p class="italic font-medium">If the above does not work (with old browsers), just create the file with notepad with the following content:</p>
     </section>
