sticky footer added

--- a/src/index.html
+++ b/src/index.html
@@ -255,8 +255,9 @@
       <div class="border-blue/40 border-2 max-w-[400px] p-5" x-html="render_config_br()"></div>
     </section>
   </main>
-  <footer>
-    <!-- Footer content goes here -->
+  <footer class="w-full p-4 bg-gradient-to-r from-teal-200/80 to-emerald-800/80 border-t-2 border-gray/90 shadow-lg drop-shadow-lg md:flex md:items-center md:justify-between md:p-6">
+    <span class="text-sm text-center text-white mx-auto">© 2023 <a href="https://mptrdev.com/" class="hover:underline">Mptrdev.com</a>. All Rights Reserved.
+    </span>
   </footer>
 </body>
 
